feat(portal): add displayName, update CRUD endpoints
