# pkg/db/models_generated.go
@@ -1137,6 +1137,7 @@ type PortalConfiguration struct {
 	ID          string         `db:"id"`
 	WorkspaceID string         `db:"workspace_id"`
 	Slug        string         `db:"slug"`
+	DisplayName string         `db:"display_name"`
 	AppID       sql.NullString `db:"app_id"`
 	KeyAuthID   sql.NullString `db:"key_auth_id"`
 	Enabled     bool           `db:"enabled"`
