# svc/api/routes/v2_portal_create_configuration/handler.go
@@ -86,6 +86,7 @@ func (h *Handler) Handle(ctx context.Context, s *zen.Session) error {
 			ID:          configID,
 			WorkspaceID: workspaceID,
 			Slug:        req.Slug,
+			DisplayName: req.DisplayName,
 			AppID:       appCol,
 			KeyAuthID:   keyAuthCol,
 			Enabled:     enabled,
@@ -156,6 +157,7 @@ func (h *Handler) Handle(ctx context.Context, s *zen.Session) error {
 		ID:          configID,
 		WorkspaceID: workspaceID,
 		Slug:        req.Slug,
+		DisplayName: req.DisplayName,
 		AppID:       appCol,
 		KeyAuthID:   keyAuthCol,
 		Enabled:     enabled,
